test/samples/invalid/resolving/fresh_out2.maruir
struct Foo {
	x: uint32;
	y: uint32;
}

fun alloc_foo<'fresh M>(x: uint32, y: uint32): Foo *M
locals res: Foo *M;
{
	entry:
		res := alloc Foo in M;
		store x in res.x;
		store y in res.y;
		return res;
}

fun main()
locals
	f2: Foo *#memory;
{
	entry:
		f2 := call alloc_foo<#memory>(uint32(3), uint32(4));
		return;
		
}
